# TensorDictGraphViz

./: .gitignore  CLAUDE.md  README.md  __init__.py  example.py  init_tests.ipynb  model_visualizer.py  pyproject.toml
backends/: __init__.py  base_backend.py  graphviz_backend.py
docs/plans/: 2026-02-24-visualization-improvements-design.md  2026-02-24-visualization-improvements.md
examples/: example.py  gallery.py
tensordictviz/: __init__.py  layer_registry.py  model_visualizer.py  shape_inference.py  themes.py
tensordictviz/backends/: __init__.py  base_backend.py  excalidraw_backend.py  graphviz_backend.py
tests/: test_model_visualizer.py  test_phase_a.py
